(feat) update package.json for deployment.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "license": "Proprietary",
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/nodemon --ignore node_modules shortly.js",
-    "test": "node shortly.js& ./node_modules/.bin/mocha --bail --reporter nyan test/ServerSpec.js; pkill -n node;"
+    "start": "node server/myServer.js"
   },
   "dependencies": {
     "bluebird": "^2.9.30",
@@ -18,6 +17,8 @@
     "knex": "^0.8.6",
     "morgan": "^1.6.0",
     "mysql": "^2.7.0",
-    "nodemon": "^1.3.7"
+    "nodemon": "^1.3.7",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0"
   }
 }
