--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "body-parser": "^1.13.1",
     "bookshelf": "^0.8.1",
     "express": "^4.12.4",
+    "jwt-simple": "^0.3.0",
     "knex": "^0.8.6",
     "morgan": "^1.6.0",
     "mysql": "^2.7.0",
     "nodemon": "^1.3.7",
     "passport": "^0.2.2",
+    "passport-jwt": "^1.1.0",
     "passport-local": "^1.0.0"
   }
 }
