--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.12.4",
     "jwt-simple": "^0.3.0",
     "knex": "^0.8.6",
+    "moment": "^2.10.3",
     "morgan": "^1.6.0",
     "mysql": "^2.7.0",
     "nodemon": "^1.3.7",
