--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.13.1",
     "bookshelf": "^0.8.1",
     "express": "^4.12.4",
+    "express-jwt": "^3.0.1",
     "jwt-simple": "^0.3.0",
     "knex": "^0.8.6",
     "moment": "^2.10.3",
