(feat) add functionality to store token in local storage on login and remove on logout

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,12 @@
 {
   "name": "HowWasIt",
   "version": "0.0.0",
-  "authors": ["Brett Kan", "Chris Staton", "Josh Turner", "Ning Xia"],
+  "authors": [
+    "Brett Kan",
+    "Chris Staton",
+    "Josh Turner",
+    "Ning Xia"
+  ],
   "ignore": [
     "**/.*",
     "node_modules",
@@ -11,6 +16,7 @@
     "jquery": "~2.0.3",
     "bootstrap": "~3.3.4",
     "angular": "~1.2.18",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angular-local-storage": "~0.2.2"
   }
 }
